[package]
name = "is31fl3731"
version = "0.1.0"
edition = "2021"
authors = ["Matt Gleich"]
categories = ["embedded", "no-std", "hardware-support"]
description = "Platform agnostic driver for the IS31FL3731 Charlieplex IC"
license = "MIT"
repository = "https://github.com/gleich/is31fl3731"
readme = "README.md"

[dependencies]
embedded-hal = "0.2.6"
