[package] 
name = "is31fl3731"
version = "1.0.0"
edition = "2021"
authors = ["Matt Gleich"]
categories = ["embedded", "no-std"]
description = "Driver for Lumissil Microsystem's IS31FL3731 IC"
license = "MIT"
repository = "https://github.com/gleich/is31fl3731"
readme = "README.md"

[dependencies]
embedded-hal = "0.2.6"

[dev-dependencies]
rppal = {version = "0.13.1", features = ["hal"]}

[features]
charlie_bonnet = []
charlie_wing = []
keybow_2040 = []
led_shim = []
matrix = []
rgb_matrix_5x5 = []
scroll_phat_hd = []

[[example]]
name = "rpi"
required-features = ["charlie_bonnet"]
